--- a/blog/templates/base.html.twig
+++ b/blog/templates/base.html.twig
@@ -5,7 +5,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        {# Run composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
         {#CDN BOOTSTRAP#}
        
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/lux/bootstrap.min.css" integrity="sha384-9+PGKSqjRdkeAU7Eu4nkJU8RFaH8ace8HGXnkiKMP9I9Te0GJ4/km3L1Z8tXigpG" crossorigin="anonymous">
         
         <link rel="stylesheet" href="{{ asset('CSS/style.css')}} ">
-            {# {{ encore_entry_link_tags('app') }} #}
+           {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
@@ -65,13 +65,19 @@
                 </div>
             </div>
         </nav>
+        <main class="container-fluid conteneur-base">
+        {% block body %} {#Entre 2 balises nous recevrons le contenu de nos différentes pages qui étendent de ce template #}
+        {% endblock %}
+        </main>
 
+        <footer class"bg-primary text-center">
+        &copy; 2022 10MENTION WEB
+        </footer>
 
-
-
-        {% block body %} {#Entre ces 2 balises nous recevrons le contenu de nos différentes pages qui étendent de ce template#} {% endblock %}
-
-        {# JS de BOOTSTRAP #}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    </body>
+{# JS de BOOTSTRAP #}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </html>
+
+
+
+
