--- a/blog/templates/blog/index.html.twig
+++ b/blog/templates/blog/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{# {% extends 'base.html.twig' %}
 
 {% block title %}Hello BlogController!{% endblock %}
 
@@ -17,4 +17,55 @@
         <li>Your template at <code><a href="{{ 'C:/xampp/htdocs/_SYMFO/_SYMFO/blog/templates/blog/index.html.twig'|file_link(0) }}">templates/blog/index.html.twig</a></code></li>
     </ul>
 </div>
+{% endblock %} #}
+
+
+{% extends 'base.html.twig' %}
+
+{% block title %}Liste des Articles{% endblock %}
+
+{% block body %}
+<h1 class="display-4 text-center bg-primary my-3"></h1>
+<div class="album py-5 bg-light">
+        <div class="container">
+
+          <div class="row">
+
+          {% for item in articles %}
+            <div class="col-md-4">
+              <div class="card mb-4 box-shadow">
+                <img class="card-img-top" src="{{item.image}}" alt="Card image cap">
+                <div class="card-body">
+                <h3> {{item.title}}</h3>
+                  <p class="card-text">Ce n'est pas pour gagner de l'argent qu'il faudrait de l'enthousiasme, c'est pour le dépenser.</p>
+
+      <div class="row my-2 text-center text-danger">
+                       <i class="italic">écrit par {{item.author}}</i>
+         </div>
+                  <div class="d-flex justify-content-between align-items-center">
+                 
+                    <div class="btn-group">
+                    
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Voir</button>
+                      <button type="button" class="btn btn-sm btn-outline-secondary">Modifier</button>
+                    </div>
+                    <small class="text-muted">{{item.createdAt| date('d/m/Y')}}- {{item.createdAt| date('H:i:s')}}</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+             {% endfor %}
+        </div>
+
+        <figure class="text-center">
+  <blockquote class="blockquote">
+    <p class="mb-0">"Pour être irremplaçable, il faut être différente."</p>
+  
+  </blockquote>
+  <figcaption class="blockquote-footer">
+    Gabrielle famous in- <cite title="Source Title">Coco Chanel- </cite>
+  </figcaption>
+</figure>
+    </div>        
 {% endblock %}
+
