--- a/blog/templates/base.html.twig
+++ b/blog/templates/base.html.twig
@@ -45,7 +45,7 @@
                         <a class="nav-link" href="#">Identifiez-vous</a>
                         </li>
                         <li class="nav-item">
-                        <a class="nav-link" href="#">Affichage des cours</a>
+                        <a class="nav-link" href="#">Articles</a>
                         </li>
                         <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Langages</a>
