--- a/blog/templates/blog/home.html.twig
+++ b/blog/templates/blog/home.html.twig
@@ -5,7 +5,7 @@
 
 {# Commentaires Twig #}
 
-<h1> {{title }} </h1> {# Ici nous interpolons la variable 'titre1' que nous a envoyé la fonction rende() de 'home', depuis notre BlogController #}
+<h1> {{titre1 }} </h1> {# Ici nous interpolons la variable 'titre1' que nous a envoyé la fonction rende() de 'home', depuis notre BlogController #}
 
 {% if age < 18 %}
 <div class="alert alert-danger text-center rounded">
